--- a/angular.json
+++ b/angular.json
@@ -77,7 +77,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "time_slots.json", "input": "./", "output": "./assets/" }
             ]
           }
         },
